--- a/index.html
+++ b/index.html
@@ -17,7 +17,17 @@
     <script src="Ejercicio08.js"></script>
     <script src="Ejercicio09.js"></script>
     <script src="Ejercicio10.js"></script>
-    -->
+    <script src="Ejercicio11.js"></script>
+    <script src="Ejercicio12.js"></script>
     <script src="Ejercicio13.js"></script>
+    <script src="Ejercicio14.js"></script>
+    <script src="Ejercicio15.js"></script>
+    <script src="Ejercicio16.js"></script>
+    <script src="Ejercicio17.js"></script>
+    <script src="Ejercicio18.js"></script>-->
+    <script src="Ejercicio19.js"></script>
+    <script src="Ejercicio20.js"></script>
+    <script src="Ejercicio21.js"></script>
+    <script src="Ejercicio22.js"></script>
 </body>
 </html>
