--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <!--
     <script src="Ejercicio01.js"></script>
     <script src="Ejercicio02.js"></script>
     <script src="Ejercicio03.js"></script>
@@ -24,7 +23,7 @@
     <script src="Ejercicio15.js"></script>
     <script src="Ejercicio16.js"></script>
     <script src="Ejercicio17.js"></script>
-    <script src="Ejercicio18.js"></script>-->
+    <script src="Ejercicio18.js"></script>
     <script src="Ejercicio19.js"></script>
     <script src="Ejercicio20.js"></script>
     <script src="Ejercicio21.js"></script>
